# TDDE05-project

ros2_ws/: .gitattributes  .gitignore
ros2_ws/src/air_common/: package.xml  setup.cfg  setup.py
ros2_ws/src/air_common/rviz/: config.rviz
ros2_ws/src/air_common/screen/: screen
ros2_ws/src/air_database/: CMakeLists.txt  package.xml
ros2_ws/src/air_database/src/: database_proxy.cpp  semantic_listener.cpp
ros2_ws/src/air_exploration/: CMakeLists.txt  clean_csv.py  cleannearest_15_heuristic.csv  cleannearest_15_noheuristic.csv  nearest_15_heuristic.csv  nearest_15_noheuristic.csv  package.xml  slam_async.yaml
ros2_ws/src/air_exploration/data/: biggest.csv  heuristic.csv  lab.csv  planned.csv
ros2_ws/src/air_exploration/include/: driver.hpp  exploration_constants.hpp  frontier.hpp  map.hpp
ros2_ws/src/air_exploration/src/: database.cpp  exploration.cpp  exploration_constants.hpp  exploration_server.cpp  explore_executor.cpp  explore_executor.hpp  explore_executor_lab3.cpp  frontier-new.cpp  frontier.cpp  frontier.hpp  map.cpp  navigate_executor.cpp  navigate_executor.hpp  position_service.cpp  semantic_visualizer.cpp  tst_executor.cpp  undock_executor.cpp  undock_executor.hpp
ros2_ws/src/air_exploration/tst/: dock.json  drive_to.json  explore.json  explore_lab.json  seq.json  undock.json
ros2_ws/src/air_exploration/tsts/: dock.json  drive_home.json  drive_to.json  drive_to_explore.json  drive_to_repeat.json  explore.json  explore_lab.json  explore_record_semantic.json  undock.json
ros2_ws/src/air_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/air_interfaces/action/: Explore.action  Goals.action  Navigate.action
ros2_ws/src/air_interfaces/msg/: Entity.msg  Goal.msg  Person.msg
ros2_ws/src/air_interfaces/srv/: ExecuteTst.srv  GetEntities.srv  GetPosition.srv
ros2_ws/src/air_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/air_navigation/air_navigation/: navigate_action_server.py  navigation_node.py
ros2_ws/src/air_navigation_layers/: CMakeLists.txt  command.md  costmap_plugins.xml  nav2.yaml  package.xml
ros2_ws/src/air_navigation_layers/include/air_navigation_layers/: human_layer.hpp  proxemic_layer.hpp
ros2_ws/src/air_navigation_layers/src/: human_layer.cpp  passing_layer.cpp  proxemic_layer.cpp
ros2_ws/src/air_nlp/: package.xml  setup.cfg  setup.py
ros2_ws/src/air_nlp/air_nlp/: nlp_node.py  predict.py  requirements.txt  utils.py
ros2_ws/src/air_nlp/air_nlp/airproject_model/: config.json
ros2_ws/src/air_nlp/air_nlp/data/airproject/: intent_label.txt  slot_label.txt
ros2_ws/src/air_planning/: package.xml  setup.cfg  setup.py
ros2_ws/src/air_planning/air_planning/: domain.pddl  output  planning_node.py  problem-1.pddl  problem0.pddl  problem1.pddl  problem2.pddl  tst.json
ros2_ws/src/exploration/: CMakeLists.txt  package.xml
ros2_ws/src/exploration/src/: position_service.cpp
ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
webpages/: index.html
